--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 	</head>
 	<body>
 		<main>
-			<div>Hi my name is Hanna
+			<div>
+				<img src="images/headshot.jpg">
+				<nav>
+					<a href="#">CV</a>
+					<a href="#">Contact</a>
+					<a href="#">Projects</a>
+				</nav>
 			</div>
 			
 		</main>
