--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<body>
 		<main>
 			<div>
-				<img src="images/headshot.jpg">
+				<img src="images/headshot.jpg" height=30%>
 				<nav>
-					<a href="#">CV</a>
-					<a href="#">Contact</a>
-					<a href="#">Projects</a>
+					<a href="#"> class="text" CV</a>
+					<a href="#"> class="text" Contact</a>
+					<a href="#"> class="text" Projects</a>
 				</nav>
 			</div>
 			
