--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 			<div>
 				<img src="images/headshot.jpg" height=30%>
 				<nav>
-					<a href="#"> class="text" CV</a>
-					<a href="#"> class="text" Contact</a>
-					<a href="#"> class="text" Projects</a>
+					<a href="#" class="text"> CV</a>
+					<a href="#" class="text"> Contact</a>
+					<a href="#" class="text"> Projects</a>
 				</nav>
 			</div>
 			
