--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<main>
 			<div>
-				<img src="images/headshot.jpg" height=30%>
+				<img src="images/headshot.jpg" height=100px>
 				<nav>
 					<a href="#" class="text"> CV</a>
 					<a href="#" class="text"> Contact</a>
