--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 				<img src="images/headshot.jpg" height=100px>
 				<nav>
 					<a href="#" class="text"> CV</a>
-					<a href="#" class="text"> Contact</a>
-					<a href="#" class="text"> Projects</a>
+					<a href="#" class="text"> contact</a>
+					<a href="#" class="text"> projects</a>
 				</nav>
 			</div>
 			
