--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en-US" dir="ltr">
+<html lang='en-US' dir='ltr'>
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset='utf-8'>
+		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<title>Hanna Hamilton</title>
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-		<link href="styles.css" rel="stylesheet" type="text/css">
+		<link href='styles.css' rel='stylesheet'>
 	</head>
 	<body>
 		<main>
