--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div>
 				<img src="images/headshot.jpg" height=100px>
 				<nav>
-					<a href="#" class="text"> CV</a>
+					<a href="CV.pdf" class="text"> CV</a>
 					<a href="#" class="text"> contact</a>
 					<a href="#" class="text"> projects</a>
 				</nav>
