--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 	</head>
 	<body>
 		<main>
-			<div>
-				<img src="images/headshot.jpg" height=100px>
-				<nav>
-					<a href="CV.pdf" class="text"> CV</a>
-					<a href="#" class="text"> contact</a>
-					<a href="#" class="text"> projects</a>
-				</nav>
+			<div class="container>
+				<div class="about-me"
+					<img src="images/headshot.jpg" height=100px>
+					<nav>
+						<a href="CV.pdf" class="text"> CV</a>
+						<a href="#" class="text"> contact</a>
+						<a href="#" class="text"> projects</a>
+					</nav>
+				</div>
+				<div class="photos">
+						
+				</div>
 			</div>
 			
 		</main>
