--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<a href="#" class="text"> projects</a>
 				</nav>
 			</div>
-			<div class="photos">
+			<div class="photos">Insert photos
 						
 			</div>
 			
