--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href='styles.css' rel='stylesheet'>
 	</head>
 	<body>
-			<div class="about-me"
+			<div class="about-me">
 				<img src="images/headshot.jpg" height=100px>
 				<nav>
 					<a href="CV.pdf" class="text"> CV</a>
