--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<link href='styles.css' rel='stylesheet'>
 	</head>
 	<body>
-			<div>
+			<div id="left">
 				<img src="images/headshot.jpg" height=100px>
 				<nav>
 					<a href="CV.pdf" class="text"> CV</a>
 					<a href="#" class="text"> contact</a>
 					<a href="#" class="text"> projects</a>
 				</nav>
-			</div>
+			</div id="right">
 			<div>Insert photos
 						
 			</div>
