--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 					<a href="#" class="text"> contact</a>
 					<a href="#" class="text"> projects</a>
 				</nav>
-			</div id="right">
-			<div>Insert photos
+			</div> 
+			<div id="right"> Insert photos
 						
 			</div>
 			
