--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href='styles.css' rel='stylesheet'>
 	</head>
 	<body>
-			<div>
+			<div id="div1">
 				<img src="images/headshot.jpg" height=100px>
 				<nav>
 					<a href="CV.pdf" class="text"> CV</a>
@@ -16,7 +16,7 @@
 					<a href="#" class="text"> projects</a>
 				</nav>
 			</div> 
-			<div> Insert photos
+			<div id="div2"> Insert photos
 						
 			</div>
 			
