--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 		<link href='styles.css' rel='stylesheet'>
 	</head>
 	<body>
-			<div id="div2"> Insert photos
+		<section class="container">
+			<div> Insert photos
 						
 			</div>
-			<div id="div3">
+			<div>
 				<img src="images/headshot.jpg" height=100px>
 				<nav>
 					<a href="CV.pdf" class="text"> CV</a>
@@ -19,6 +20,6 @@
 					<a href="#" class="text"> projects</a>
 				</nav>
 			</div> 
-			
+		</section>
 	</body>
 </html>
