--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<link href='styles.css' rel='stylesheet'>
 	</head>
 	<body>
-		<section class="container">
-			<div> Insert photos
+		<div class="flex-container">
+			<div class="flex-child"> Insert photos
 						
 			</div>
-			<div>
+			<div class="flex-child">
 				<img src="images/headshot.jpg" height=100px>
 				<nav>
 					<a href="CV.pdf" class="text"> CV</a>
@@ -20,6 +20,6 @@
 					<a href="#" class="text"> projects</a>
 				</nav>
 			</div> 
-		</section>
+		</div>
 	</body>
 </html>
