--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<link href='styles.css' rel='stylesheet'>
 	</head>
 	<body>
-		<div class="flex-container">
-			<div class="flex-child"> Insert photos
+		<div class="grid-container">
+			<div class="grid-child"> Insert photos
 						
 			</div>
-			<div class="flex-child">
+			<div class="grid-child">
 				<img src="images/headshot.jpg" height=100px>
 				<nav>
 					<a href="CV.pdf" class="text"> CV</a>
