--- a/index.html
+++ b/index.html
@@ -1,4 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Title of the document</title>
+    <style>
+      #boxes {
+        content: "";
+        display: table;
+        clear: both;
+      }
+      div {
+        float: left;
+        height: 470px;
+        width: 23%;
+        padding: 0 10px;
+      }
+      #column1 {
+        background-color: #a1edcc;
+      }
+      #column2 {
+        background-color: #a0e9ed;
+        width: 43%;
+      }
+      #column3 {
+        background-color: #f497f1;
+      }
+      h2 {
+        color: #000000;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <main id="boxes">
+      <h2>W3docs</h2>
+      <div id="column1">
+        <h2>What is Lorem Ipsum?</h2> 
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+      </div>
+      <div id="column2">
+        <h2>Why do we use it?</h2> 
+        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+      </div>
+      <div id="column3">
+        <h2>Where does it come from?:</h2> 
+        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cities of the word in classical literature, discovered the undoubtable source.
+      </div>
+    </main>
+  </body>
+</html>
+
+
+<!-- <!doctype html>
 <html lang='en-US' dir='ltr'>
 	<head>
 		<meta charset='utf-8'>
@@ -23,3 +75,4 @@
 		</div>
 	</body>
 </html>
+ -->
