--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         float: left;
         height: 470px;
         width: 47%;
-        padding: 0 10px;
+        padding: 0 0;
       }
       #column1 {
         background-color: #a1edcc;
