--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <title>Title of the document</title>
@@ -39,10 +39,10 @@
       </div>
     </main>
   </body>
-</html>
+</html> -->
 
 
-<!-- <!doctype html>
+<!doctype html>
 <html lang='en-US' dir='ltr'>
 	<head>
 		<meta charset='utf-8'>
@@ -52,11 +52,11 @@
 		<link href='styles.css' rel='stylesheet'>
 	</head>
 	<body>
-		<div class="grid-container">
-			<div class="grid-child"> Insert photos
+		<main>
+			<div id="column1"> Insert photos
 						
 			</div>
-			<div class="grid-child">
+			<div id="column2">
 				<img src="images/headshot.jpg" height=100px>
 				<nav>
 					<a href="CV.pdf" class="text"> CV</a>
@@ -64,7 +64,7 @@
 					<a href="#" class="text"> projects</a>
 				</nav>
 			</div> 
-		</div>
+		<main>
 	</body>
 </html>
- -->
+
