--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<link href='styles.css' rel='stylesheet'>
 	</head>
 	<body>
-		<main>
+		<main id="boxes">
 			<div id="column1"> Insert photos
 						
 			</div>
