--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Title of the document</title>
@@ -39,10 +39,10 @@
       </div>
     </main>
   </body>
-</html> -->
+</html>
 
 
-<!doctype html>
+<!-- <!doctype html>
 <html lang='en-US' dir='ltr'>
 	<head>
 		<meta charset='utf-8'>
@@ -68,4 +68,4 @@
 		<main>
 	</body>
 </html>
-
+ -->
