--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
       }
       div {
         float: left;
-        height: 470px;
-        width: 50%;
+/*         height: 470px;
+        width: 50%; */
         padding: 0 0;
+	display: inline-block;
       }
       #column1 {
         background-color: #a1edcc;
