--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
     </style>
   </head>
   <body>
-    <main id="boxes">
+	 <div style="width: 100%;overflow:auto;">
+    		<div style="float:left; width: 80%">
+    		</div>
+    		<div style="float:right;">
+    		</div>
+	 </div>
+<!--     <main id="boxes">
       <div id="column2">
 	<img src="images/headshot.jpg" height=100px>
 		<nav>
@@ -39,7 +45,7 @@
       </div> 
       <div id="column1"> Insert photos
       </div>
-    </main>
+    </main> -->
   </body>
 </html>
 
