--- a/index.html
+++ b/index.html
@@ -30,8 +30,16 @@
   <body>
 	 <div style="width: 100%;overflow:auto;">
     		<div style="float:left; width: 80%">
+			<img src="images/headshot.jpg" height=100px>
+				<nav>
+					<a href="CV.pdf" class="text"> CV</a>
+					<a href="#" class="text"> contact</a>
+					<a href="#" class="text"> projects</a>
+				</nav>
     		</div>
     		<div style="float:right;">
+			<div id="column1"> Insert photos		
+			</div>
     		</div>
 	 </div>
 <!--     <main id="boxes">
