--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         clear: both;
       }
       div {
-	heigh: 100vh;
+	height: 100vh;
         float: left;
 /*         height: 470px;
         width: 50%; */
