--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<a href="#" class="text"> projects</a>
 				</nav>
     		</div>
-    		<div style="float:right;">
+    		<div style="float:right; width: 30%">
 			<div id="column1"> Insert photos		
 			</div>
     		</div>
