--- a/index.html
+++ b/index.html
@@ -16,17 +16,9 @@
         padding: 0 0;
 	display: inline-block;
       }
-      #column1 {
-        background-color: #a1edcc;
-      }
-      #column2 {
-        background-color: #a0e9ed;
-      }
-      h2 {
-        color: #000000;
-        text-align: center;
-      }
     </style>
+	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+	<link href='styles.css' rel='stylesheet'>
   </head>
   <body>
 	 <div style="width: 100%;overflow:auto;">
@@ -39,7 +31,7 @@
 				</nav>
     		</div>
     		<div style="float:right; width: 30%">
-			<div id="column1"> Insert photos		
+			<div> Insert photos		
 			</div>
     		</div>
 	 </div>
