--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Title of the document</title>
-    <style>
+<!--     <style>
       #boxes {
         content: "";
         display: table;
@@ -16,7 +16,7 @@
         padding: 0 0;
 	display: inline-block;
       }
-    </style>
+    </style> -->
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 	<link href='styles.css' rel='stylesheet'>
   </head>
@@ -31,8 +31,7 @@
 				</nav>
     		</div>
     		<div style="float:right; width: 30%">
-			<div> Insert photos		
-			</div>
+			Insert photos
     		</div>
 	 </div>
   </body>
