--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title of the document</title>
+    <title>Hanna Hamilton</title>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 	<link href='styles.css' rel='stylesheet'>
   </head>
   <body>
-	 <div style="width: 100%;overflow:auto;">
-    		<div style="float:left; width: 70%">
-			<img src="images/headshot.jpg" height=100px>
+	 <div id='outer-div'>
+    		<div id='intro'>
+			<img src='images/headshot.jpg' height=100px>
 				<nav>
-					<a href="CV.pdf" class="text"> CV</a>
-					<a href="#" class="text"> contact</a>
-					<a href="#" class="text"> projects</a>
+					<a href='CV.pdf' class='text'> CV</a>
+					<a href='#' class='text'> contact</a>
+					<a href='#' class='text'> projects</a>
 				</nav>
     		</div>
-    		<div style="float:right; width: 30%">
+    		<div id='photos'>
 			Insert photos
     		</div>
 	 </div>
