--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   </head>
   <body>
     <div id='outer-div'>
-    	<div id='intro'>
+    	<div id='about-me'>
 	  <img src='images/headshot.jpg' height=100px>
 	  <nav>
 	    <a href='CV.pdf' class='text'> CV</a>
 	    <a href='#' class='text'> contact</a>
 	    <a href='#' class='text'> projects</a>
 	  </nav>
+	  <div id ='about-me-text'>
+	  <div>
     	</div>
     	<div id='photos'>
 	  Insert photos
