--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id='outer-div'>
     	<div id='about-me'>
-	  <img src='images/headshot.jpg' height=100px>
+	  <img src='images/headshot.jpg' height=100px class='headshot'>
 	  <nav>
 	    <a href='CV.pdf' class='text'> CV</a>
 	    <a href='#' class='text'> contact</a>
