--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div id='outer-div'>
     	<div id='about-me'>
 	  <img src='images/headshot.jpg' height=100px id='headshot'>
+	  <div>Hanna Hamilton
+	  </div>
 	  <nav>
 	    <a href='CV.pdf' class='text'> CV</a>
 	    <a href='#' class='text'> contact</a>
