--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <div id='outer-div'>
     	<div id='about-me'>
 	  <img src='images/headshot.jpg' height=100px id='headshot'>
-	  <div>Hanna Hamilton
-	  </div>
+	  <h1>Hanna Hamilton</h1>
 	  <nav>
 	    <a href='CV.pdf' class='text'> CV</a>
 	    <a href='#' class='text'> contact</a>
