--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 	  <img src='images/headshot.jpg' height=100px id='headshot'>
 	  <h1>Hanna Hamilton</h1>
 	  <nav>
-	    <a href='CV.pdf' class='text'> CV</a>
-	    <a href='#' class='text'> contact</a>
-	    <a href='#' class='text'> projects</a>
+            <ul>
+	      <li><a href='CV.pdf' class='text'> CV</a></li>
+	      <li><a href='#' class='text'> contact</a></li>
+	      <li><a href='#' class='text'> projects</a></li>
+	    </ul>
 	  </nav>
 	  <div id ='about-me-text'>
 	  </div>
