--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	  <h1>Hanna Hamilton</h1>
 	  <nav>
             <ul>
-	      <li><a href='CV.pdf' class='text'> CV</a></li>
-	      <li><a href='#' class='text'> contact</a></li>
-	      <li><a href='#' class='text'> projects</a></li>
+	      <li><a href='CV.pdf' class='text'> CV :hover </a></li>
+	      <li><a href='#' class='text'> contact :hover </a></li>
+	      <li><a href='#' class='text'> projects :hover </a></li>
 	    </ul>
 	  </nav>
 	  <div id ='about-me-text'>
