--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
 	  </div>
 	</div>
     	<div id='photos'>
-	  Insert photos
+	  <img src= >
+	  <img src= >
+	  <img src= >
+	  <img src= >
+	  <img src= >
+	  <img src= >
+	  <img src= >
+	  <img src= >
+	  <img src= >
+	  <img src= >
     	</div>
     </div>
   </body>
