--- a/index.html
+++ b/index.html
@@ -14,25 +14,27 @@
 	  <h1>Hanna Hamilton</h1>
 	  <nav>
             <ul>
-	      <li><a href='CV.pdf' class='text'> CV :hover </a></li>
-	      <li><a href='#' class='text'> contact :hover </a></li>
-	      <li><a href='#' class='text'> projects :hover </a></li>
+	      <li><a href='CV.pdf' class='text' :hover> CV </a></li>
+	      <li><a href='#' class='text' :hover> contact </a></li>
+	      <li><a href='#' class='text' :hover> projects </a></li>
 	    </ul>
 	  </nav>
 	  <div id ='about-me-text'>
 	  </div>
 	</div>
     	<div id='photos'>
-	  <img src= >
-	  <img src= >
-	  <img src= >
-	  <img src= >
-	  <img src= >
-	  <img src= >
-	  <img src= >
-	  <img src= >
-	  <img src= >
-	  <img src= >
+	  <img src='images/ala_moana_beach.jpg' >
+	  <img src= 'images/hoomaluhia_botanical_garden.jpg' >
+	  <img src= 'images/siam_point.jpg' >
+	  <img src= 'images/gt_grad_tech_tower.jpg' >
+	  <img src= 'images/lanikai_pillbox_hike.jpg' >
+	  <img src= 'images/uw_grad.jpg' >
+	  <img src= 'images/yurt_wyoming.jpg' >
+	  <img src= 'images/gt_grad_throwing_cap.jpg' >
+	  <img src= 'images/koko_hike.jpg' >
+	  <img src= 'images/hilo_waterfall.jpg' >
+	  <img src= 'images/rain_madison.jpg' >
+	  <img src= 'images/volcano.jpg' >
     	</div>
     </div>
   </body>
