--- a/index.html
+++ b/index.html
@@ -19,8 +19,22 @@
 	      <li><a href='#' class='text' :hover> projects </a></li>
 	    </ul>
 	  </nav>
-	  <div id ='about-me-text'>
-	  </div>
+	  <p id='about-me-text'>
+	  My data science journey began as I was completing my BS in Industrial Engineering from the University of Wisconsin-Madison. 
+          I was enrolled in an introductory data science course and was fascinated as I learned about techniques such as k-means clustering, 
+          apriori algorithm, and decision trees. I steered away from the job search process, quickly prepared for the GRE, and applied to 
+          masters programs because I just wanted to learn more. I attended Georgia Tech for my MS in Computational Data Analytics. 
+          During this time, I had the opportunity to work as a graduate teaching assistant for Regression Analysis, a graduate level course 
+          about various regression models and variable selection techniques, as well as their implementations with R. I also joined a research 
+          group consisting of ISyE professors and other graduate students to analyze various hybrid instructional mode strategies and inform 
+          campus planners during the COVID-19 pandemic. We compared the strategies from both health and academic perspectives, by their effects 
+	  on various groups of students, and based on the trade-off between health risk and academic burden.
+		  
+		  
+	  In my free time, I enjoy practicing yoga, hiking, and going to beaches. This year, I have been doing a lot of traveling in Hawaii. 
+	  I love exploring new places, trying new foods, and meeting people from all over the world. Although I do love Minnesota, it is always 
+	  a good idea for me to take breaks from the long and cold Minnesota winters :)
+	  </p>
 	</div>
     	<div id='photos'>
 	  <img src='images/ala_moana_beach.jpg' >
