--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
 	  </p>
 	</div>
     	<div id='photos'>
-	  <img src='images/ala_moana_beach.jpg' >
-	  <img src= 'images/hoomaluhia_botanical_garden.jpg' >
-	  <img src= 'images/siam_point.jpg' >
-	  <img src= 'images/gt_grad_tech_tower.jpg' >
-	  <img src= 'images/lanikai_pillbox_hike.jpg' >
-	  <img src= 'images/uw_grad.jpg' >
-	  <img src= 'images/yurt_wyoming.jpg' >
-	  <img src= 'images/gt_grad_throwing_cap.jpg' >
-	  <img src= 'images/koko_hike.jpg' >
-	  <img src= 'images/hilo_waterfall.jpg' >
-	  <img src= 'images/rain_madison.jpg' >
-	  <img src= 'images/volcano.jpg' >
+	  <div><img src='images/ala_moana_beach.jpg' ></div>
+	  <div><img src= 'images/hoomaluhia_botanical_garden.jpg' ></div>
+	  <div><img src= 'images/siam_point.jpg' ></div>
+	  <div><img src= 'images/gt_grad_tech_tower.jpg' ></div>
+	  <div><img src= 'images/lanikai_pillbox_hike.jpg' ></div>
+	  <div><img src= 'images/uw_grad.jpg' ></div>
+	  <div><img src= 'images/yurt_wyoming.jpg' ></div>
+	  <div><img src= 'images/gt_grad_throwing_cap.jpg' ></div>
+	  <div><img src= 'images/koko_hike.jpg' ></div>
+	  <div><img src= 'images/hilo_waterfall.jpg' ></div>
+	  <div><img src= 'images/rain_madison.jpg' ></div>
+	  <div><img src= 'images/volcano.jpg' ></div>
     	</div>
     </div>
   </body>
