--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	      <li><a href='#' class='text' :hover> projects </a></li>
 	    </ul>
 	  </nav>
-	  <p>
+<!-- 	  <p>
 	  My data science journey began as I was completing my BS in Industrial Engineering from the University of Wisconsin-Madison. 
           I was enrolled in an introductory data science course and was fascinated as I learned about techniques such as k-means clustering, 
           apriori algorithm, and decision trees. I steered away from the job search process, quickly prepared for the GRE, and applied to 
@@ -34,10 +34,10 @@
 	  In my free time, I enjoy practicing yoga, hiking, and going to beaches. This year, I have been doing a lot of traveling in Hawaii. 
 	  I love exploring new places, trying new foods, and meeting people from all over the world. Although I do love Minnesota, it is always 
 	  a good idea for me to take breaks from the long and cold Minnesota winters :)
-	  </p>
+	  </p> -->
 	</div>
     	<div id='photos'>
-	  <div><img src='images/ala_moana_beach.jpg' ></div>
+<!-- 	  <div><img src='images/ala_moana_beach.jpg' ></div>
 	  <div><img src= 'images/hoomaluhia_botanical_garden.jpg' ></div>
 	  <div><img src= 'images/siam_point.jpg' ></div>
 	  <div><img src= 'images/gt_grad_tech_tower.jpg' ></div>
@@ -48,7 +48,7 @@
 	  <div><img src= 'images/koko_hike.jpg' ></div>
 	  <div><img src= 'images/hilo_waterfall.jpg' ></div>
 	  <div><img src= 'images/rain_madison.jpg' ></div>
-	  <div><img src= 'images/volcano.jpg' ></div>
+	  <div><img src= 'images/volcano.jpg' ></div> -->
     	</div>
     </div>
   </body>
