--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	    </ul>
 	  </nav> -->
 	    <div id="photos">
-	    <img src='images/gt_grad_throwing_cap.jpg'>
+	    <img src='images/gt_grad_throwing_cap.jpg' height=1000px>
 	    </div>
   </body>
 </html>
