--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id='outer-div'>
+	<img src='images/gt_grad_tech_tower.jpg'>
     	<div id='about-me'>
 	<!--   <img src='images/headshot.jpg' height=100px id='headshot'> -->
 	  <!-- <h1>Hanna Hamilton</h1>
@@ -20,7 +21,7 @@
 	    </ul>
 	  </nav> -->
 	    <div id="photos">
-	    <img src='images/gt_grad_throwing_cap.jpg' height=1000px>
+<!-- 	    <img src='images/gt_grad_throwing_cap.jpg' height=1000px> -->
 	    </div>
   </body>
 </html>
