--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id='outer-div'>
-	<img src='images/gt_grad_tech_tower.jpg' height='500', width='1000'>
+	<img src='images/gt_grad_tech_tower.jpg' width='1000'>
     	<div id='about-me'>
 	<!--   <img src='images/headshot.jpg' height=100px id='headshot'> -->
 	  <!-- <h1>Hanna Hamilton</h1>
