--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <div id='outer-div'>
     	<div id='about-me'>
-	<img src='images/gt_grad_tech_tower.jpg' width='100%'>
+	<h1> Hanna Hamilton </h1>
+	<h2> Data Scientist </h2>
+	<img src='images/gt_grad_tech_tower.jpg' width='75%'>
 	  <!-- <h1>Hanna Hamilton</h1>
 	  <nav>
             <ul>
@@ -19,8 +21,8 @@
 	      <li><a href='#' class='text' :hover> projects </a></li>
 	    </ul>
 	  </nav> -->
-	    <div id="photos">
+<!-- 	    <div id="photos">
 <!-- 	    <img src='images/gt_grad_throwing_cap.jpg' height=1000px> -->
-	    </div>
+	    </div> -->
   </body>
 </html>
