--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	    </ul>
 	  </nav> -->
 <!-- 	    <div id="photos">
-<!-- 	    <img src='images/gt_grad_throwing_cap.jpg' height=1000px> -->
-	    </div> -->
+	    <img src='images/gt_grad_throwing_cap.jpg' height=1000px> -->
+	    </div> 
   </body>
 </html>
