--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id='outer-div'>
-    	<div id='about-me'>
+    	<div id='left-side'>
 	<h1> Hanna Hamilton </h1>
 	<img src='images/gt_grad_tech_tower.jpg' width='100%'>
 	  <!-- <h1>Hanna Hamilton</h1>
@@ -20,8 +20,15 @@
 	      <li><a href='#' class='text' :hover> projects </a></li>
 	    </ul>
 	  </nav> -->
-<!-- 	    <div id="photos">
-	    <img src='images/gt_grad_throwing_cap.jpg' height=1000px> -->
+	    <div id='right-side>
+	      <nav>
+                <ul>
+	          <li><a href='CV.pdf' class='text' :hover> CV </a></li>
+	          <li><a href='#' class='text' :hover> contact </a></li>
+	          <li><a href='#' class='text' :hover> projects </a></li>
+	        </ul>
+	      </nav>
+<!-- 	    <img src='images/gt_grad_throwing_cap.jpg' height=1000px> -->
 	    </div> 
   </body>
 </html>
