--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <div id='outer-div'>
-	<h1> Hanna Hamilton </h1>
+	<h1> HANNA HAMILTON </h1>
 	<nav>
           <ul>
 	    <li><a href='CV.pdf' class='text' :hover> CV </a></li>
-	    <li><a href='#' class='text' :hover> contact </a></li>
-	    <li><a href='#' class='text' :hover> projects </a></li>
+	    <li><a href='#' class='text' :hover> CONTACT </a></li>
+	    <li><a href='#' class='text' :hover> PROJECTS </a></li>
 	  </ul>
 	</nav>
 	<img src='images/gt_grad_tech_tower.jpg' width='100%'>
