--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <div id='outer-div'>
-	<h1> HANNA HAMILTON </h1>
 	<nav>
           <ul>
 	    <li><a href='CV.pdf' class='text' :hover> CV </a></li>
@@ -17,7 +16,10 @@
 	    <li><a href='#' class='text' :hover> PROJECTS </a></li>
 	  </ul>
 	</nav>
+	<h1> Hanna Hamilton </h1>
+	<div>
 	<img src='images/gt_grad_tech_tower.jpg' width='50%'>
+	</div>
    </div> 
   </body>
 </html>
