--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id='outer-div'>
 	<nav>
           <ul>
+            <li><a href='#' class='text' :hover> HOME </a></li>
 	    <li><a href='CV.pdf' class='text' :hover> CV </a></li>
 	    <li><a href='#' class='text' :hover> PROJECTS </a></li>
 	    <li><a href='#' class='text' :hover> CONTACT </a></li>
