--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 	    <li><a href='#' class='text' :hover> CONTACT </a></li>
 	  </ul>
 	</nav>
-	<h1> Hanna Hamilton </h1>
+	<div>
+	<h1> HANNA HAMILTON </h1>
+	</div>
 	<div>
 	<img src='images/gt_grad_tech_tower.jpg' width='100%'>
 	</div>
