--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div id='outer-div'>
 	<nav>
           <ul>
-            <li><a href='#' class='text' :hover> HOME </a></li>
+            <li><a href='#' class='text' :hover> Home </a></li>
 	    <li><a href='CV.pdf' class='text' :hover> CV </a></li>
-	    <li><a href='#' class='text' :hover> PROJECTS </a></li>
-	    <li><a href='#' class='text' :hover> CONTACT </a></li>
+	    <li><a href='#' class='text' :hover> Projects </a></li>
+	    <li><a href='#' class='text' :hover> Contact </a></li>
 	  </ul>
 	</nav>
 	<div>
-	<h1> HANNA HAMILTON </h1>
+	<h1> Hanna Hamilton </h1>
 	</div>
 	<div>
 	<img src='images/gt_grad_tech_tower.jpg' width='100%'>
