--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class='navbar-links'>
               <ul class='nav-menu'>
                 <li ><a href='index.html' class='nav-link' class='active-page' :hover > Home </a></li>
-                <li ><a href='CV.pdf' class='nav-link' :hover> CV </a></li>
+                <li ><a href='CV.pdf' target='_blank' class='nav-link' :hover> CV </a></li>
                 <li ><a href='#' class='nav-link' :hover> Projects </a></li>
               </ul>
             </div>
