--- a/index.html
+++ b/index.html
@@ -70,7 +70,23 @@
         </p>
       </div>
     </div> 
+    <div>
+      <p>
 
+      </p>
+    </div>
+    <div id='footer-container'>
+    <footer id='photos'>
+      <div class='container'>
+        <div><img src='images/siam_point.jpg'></div>
+        <div><img src='images/ala_moana_beach.jpg'></div>
+        <div><img src='images/hoomaluhia_botanical_garden.jpg'></div>
+        <div><img src='images/yurt_wyoming.jpg'></div>
+        <div><img src='images/volcano.jpg'></div>
+        <div><img src='images/rain_madison.jpg'></div>
+      </div>
+    </footer>
+  </div>
     <!-- <figure>
       <img src="images/gt_grad_tech_tower_2.jpg">
       <figcaption>
@@ -79,9 +95,6 @@
         </p>
       </figcaption>
     </figure> -->
-    <footer>
-
-    </footer>
     <!-- <div id='outer-div'>
         <div id='right-side'>
         <h1> Hanna Hamilton </h1>
