--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       </div>
     </div> 
     <div>
-      <p>
-
+      <p id='free-time'>
+        In my free time, I enjoy reading, practicing yoga, and exploring the great outdoors.
       </p>
     </div>
     <div id='footer-container'>
