--- a/index.html
+++ b/index.html
@@ -70,23 +70,57 @@
         </p>
       </div>
     </div> 
-    <div>
-      <p id='free-time'>
-        In my free time, I enjoy reading, practicing yoga, and exploring the great outdoors.
-      </p>
-    </div>
-    <div id='footer-container'>
-    <footer id='photos'>
-      <div class='container'>
+    <div id='bottom-part'>
+      <div id='free-time'>
+        <p>
+          In my free time, I enjoy reading, practicing yoga, and exploring the great outdoors.
+        </p>
+      </div>
+      <!-- <div id='footer-container'>
+        <footer id='photos'>
+          <div class='container'>
+            <div><img src='images/siam_point.jpg'></div>
+            <div><img src='images/ala_moana_beach.jpg'></div>
+            <div><img src='images/hoomaluhia_botanical_garden.jpg'></div>
+            <div><img src='images/yurt_wyoming.jpg'></div>
+            <div><img src='images/volcano.jpg'></div>
+            <div><img src='images/rain_madison.jpg'></div>
+          </div>
+        </footer>
+      </div> -->
+      <!-- <div id='footer-container'>
+        <footer id='photos'>
+          <div class='container'>
+            <div><img src='images/siam_point.jpg'></div>
+            <div><img src='images/ala_moana_beach.jpg'></div>
+            <div><img src='images/hoomaluhia_botanical_garden.jpg'></div>
+            <div><img src='images/yurt_wyoming.jpg'></div>
+            <div><img src='images/volcano.jpg'></div>
+            <div><img src='images/rain_madison.jpg'></div>
+          </div>
+        </footer>
+      </div> -->
+      <div id='footer-container'>
+        <!-- <div class='container-mobile'> -->
+          <div><img src='images/siam_point.jpg'></div>
+          <div><img src='images/ala_moana_beach.jpg'></div>
+          <div><img src='images/hoomaluhia_botanical_garden.jpg'></div>
+          <div><img src='images/yurt_wyoming.jpg'></div>
+          <div><img src='images/volcano.jpg'></div>
+          <div><img src='images/rain_madison.jpg'></div>
+          <!-- </div> -->
+      </div>
+      <div id='footer-container-mobile'>
+    <!-- <div class='container-mobile'> -->
         <div><img src='images/siam_point.jpg'></div>
         <div><img src='images/ala_moana_beach.jpg'></div>
         <div><img src='images/hoomaluhia_botanical_garden.jpg'></div>
         <div><img src='images/yurt_wyoming.jpg'></div>
         <div><img src='images/volcano.jpg'></div>
         <div><img src='images/rain_madison.jpg'></div>
+      <!-- </div> -->
       </div>
-    </footer>
-  </div>
+    </div>
     <!-- <figure>
       <img src="images/gt_grad_tech_tower_2.jpg">
       <figcaption>
