--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div id='navigation'>
           <nav id='desktop-nav'>
             <ul class='nav-menu'>
-              <li ><a href='index.html' class='nav-link' class='active-page' :hover > Home </a></li>
+              <li ><a href='index.html' class='nav-link active-page' :hover> Home </a></li>
               <li ><a href='CV.pdf' class='nav-link' :hover> CV </a></li>
-              <li ><a href='#' class='nav-link' :hover> Projects </a></li>
+              <li ><a href='projects.html' class='nav-link' :hover> Projects </a></li>
             </ul>
           </nav> 
           <div class='menu-icon'><a href='#'><ion-icon name='menu-outline'></ion-icon></a></div>
@@ -23,9 +23,9 @@
             <!-- <div class='menu-icon'><a class='menu-icon' href='#'><ion-icon name='menu-outline'></ion-icon></a></div> -->
             <div class='navbar-links'>
               <ul class='nav-menu'>
-                <li ><a href='index.html' class='nav-link' class='active-page' :hover > Home </a></li>
+                <li ><a href='index.html' class='nav-link active-page' :hover > Home </a></li>
                 <li ><a href='CV.pdf' target='_blank' class='nav-link' :hover> CV </a></li>
-                <li ><a href='#' class='nav-link' :hover> Projects </a></li>
+                <li ><a href='projects.html' class='nav-link' :hover> Projects </a></li>
               </ul>
             </div>
           </nav>
