--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <nav id='desktop-nav'>
             <ul class='nav-menu'>
               <li ><a href='index.html' class='nav-link active-page' :hover> Home </a></li>
-              <li ><a href='CV.pdf' class='nav-link' :hover> CV </a></li>
+              <li ><a href='CV.pdf' target='_blank' class='nav-link' :hover> CV </a></li>
               <li ><a href='projects.html' class='nav-link' :hover> Projects </a></li>
             </ul>
           </nav> 
@@ -24,8 +24,8 @@
             <div class='navbar-links'>
               <ul class='nav-menu'>
                 <li ><a href='index.html' class='nav-link active-page' :hover > Home </a></li>
-                <li ><a href='CV.pdf' target='_blank' class='nav-link' :hover> CV </a></li>
-                <li ><a href='projects.html' class='nav-link' :hover> Projects </a></li>
+                <li ><a href='CV.pdf' target='_blank' class='nav-link' :hover > CV </a></li>
+                <li ><a href='projects.html' class='nav-link' :hover > Projects </a></li>
               </ul>
             </div>
           </nav>
@@ -60,13 +60,13 @@
         </td>
       </tr>
     </table> -->
-    <div id='outer-div'>
+    <div class='outer-div'>
       <div id='left-side'> 
       <!-- <img id='gt-grad-photo' src='images/gt_grad_tech_tower_2.jpg' width='100%' object-fit='contain'> -->
       </div>
       <div id='right-side'>
         <p>
-          Hi! I am an innovative and  collaborative data scientist. My passion for math and lifelong learning attracted me to data science. I designed and developed this website to showcase and broaden my skill set. I am looking for a new opportunity in data science that enables me to work with a lot of other data professionals and quickly learn new skills. Please contact me if you know of an opportunity that may be a good fit.
+          Hi! I am an innovative and collaborative data scientist. My passion for math and lifelong learning attracted me to data science. I designed and developed this website to showcase and broaden my skill set. I am looking for a new opportunity in data science that enables me to work with a lot of other data professionals and quickly learn new skills. Please contact me if you know of an opportunity that may be a good fit.
         </p>
       </div>
     </div> 
