--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1' min-width='300px'>
-    <title>Hanna Hamilton</title>
+    <title>Projects</title>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='styles.css' rel='stylesheet'>
   </head>
@@ -40,10 +40,10 @@
       </div>
     </header>
     <div id='projects-container'>
-        <div><img src='images/waipio_valley_lookout_2.jpg'><p>hannamhamilton.com</p></div>
-        <div><img src='images/covid-19_pandemic.jpg'><p>Network Analysis for Return to Campus Decisions</p></div>
-        <div><img src='images/maximum_weight_matching.jpg'><p>Analysis of Small Odd-Set Constraints in Maximum Weight Matching</p></div>
-        <div><img src='images/H-1B_visa.jpg'><p>Predicting H-1B Visa Application Outcomes</p></div>
+        <div><a href='hannamhamilton.com.html'> <img src='images/waipio_valley_lookout_2.jpg'> </a> <p>hannamhamilton.com</p></div>
+        <div><a href='network_analysis.html'> <img src='images/covid-19_pandemic.jpg'> </a> <p>Network Analysis for Return to Campus Decisions</p></div>
+        <div><a href='maximum_weight_matching.html'> <img src='images/maximum_weight_matching.jpg'> </a> <p>Analysis of Small Odd-Set Constraints in Maximum Weight Matching</p></div>
+        <div><a href='H-1B_visa.html'> <img src='images/H-1B_visa.jpg'> </a> <p>Predicting H-1B Visa Application Outcomes</p></div>
     </div> 
    <script type='module' src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js'></script>
    <script nomodule src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js'></script>
