--- a/hannamhamilton.com.html
+++ b/hannamhamilton.com.html
@@ -30,7 +30,7 @@
           </nav>
         </div>
         <div id='github-email-linkedin'>
-          <div class='github-email-linkedin'><a href='https://github.com/hhamilton33' target='_blank'><ion-icon name='logo-github'></ion-icon></a></div>
+          <div class='github-email-linkedin'><a href='https://github.com/hhamilton33/hanna-hamilton' target='_blank'><ion-icon name='logo-github'></ion-icon></a></div>
           <div class='github-email-linkedin'><a href='https://www.linkedin.com/in/hanna-hamilton/' target='_blank'><ion-icon name='logo-linkedin'></ion-icon></a></div>
           <div class='github-email-linkedin'><a href='mailto: hmhamilton1126@gmail.com'><ion-icon name='mail-outline'></ion-icon></a></div>
         </div>
