--- a/H-1B_visa.html
+++ b/H-1B_visa.html
@@ -43,7 +43,7 @@
             <p>  </p>
         </div>
         <div class='project-photo'> 
-            <img src='images/H-1B_visa.jpg'> 
+            <img src='images/H-1B_visa_smaller.jpg'> 
         </div>
    <script type='module' src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js'></script>
    <script nomodule src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js'></script>
