--- a/network_analysis.html
+++ b/network_analysis.html
@@ -15,7 +15,7 @@
             <ul class='nav-menu'>
               <li ><a href='index.html' class='nav-link' :hover> Home </a></li>
               <li ><a href='CV.pdf' target='_blank' class='nav-link' :hover> CV </a></li>
-              <li ><a href='projects.html' class='nav-link active-page' :hover> Projects </a></li>
+              <li ><a href='projects.html' class='nav-link' :hover> Projects </a></li>
             </ul>
           </nav> 
           <div class='menu-icon'><a href='#'><ion-icon name='menu-outline'></ion-icon></a></div>
@@ -24,7 +24,7 @@
               <ul class='nav-menu'>
                 <li ><a href='index.html' class='nav-link' :hover > Home </a></li>
                 <li ><a href='CV.pdf' target='_blank' class='nav-link' :hover > CV </a></li>
-                <li ><a href='projects.html' class='nav-link active-page' :hover > Projects </a></li>
+                <li ><a href='projects.html' class='nav-link' :hover > Projects </a></li>
               </ul>
             </div>
           </nav>
@@ -45,7 +45,7 @@
       </div>
     <!-- </div> -->
     <div class='project-photo'>
-        <img src='images/covid-19_pandemic.jpg'> 
+        <img src='images/covid-19_pandemic_smaller.jpg'> 
       <!-- <div id='left-side'> 
       </div>
       <div id='right-side'>
