--- a/projects.html
+++ b/projects.html
@@ -40,10 +40,10 @@
       </div>
     </header>
     <div id='projects-container'>
-        <div><a href='hannamhamilton.com.html'> <img src='images/waipio_valley_lookout_2.jpg'> </a> <p>hannamhamilton.com</p></div>
-        <div><a href='network_analysis.html'> <img src='images/covid-19_pandemic.jpg'> </a> <p>Network Analysis for Return to Campus Decisions</p></div>
-        <div><a href='maximum_weight_matching.html'> <img src='images/maximum_weight_matching.jpg'> </a> <p>Analysis of Small Odd-Set Constraints in Maximum Weight Matching</p></div>
-        <div><a href='H-1B_visa.html'> <img src='images/H-1B_visa.jpg'> </a> <p>Predicting H-1B Visa Application Outcomes</p></div>
+        <div><a href='hannamhamilton.com.html'> <img src='images/waipio_valley_lookout_2_smaller.jpg'> </a> <p>hannamhamilton.com</p></div>
+        <div><a href='network_analysis.html'> <img src='images/covid-19_pandemic_smaller.jpg'> </a> <p>Network Analysis for Return to Campus Decisions</p></div>
+        <div><a href='maximum_weight_matching.html'> <img src='images/maximum_weight_matching_smaller.jpg'> </a> <p>Analysis of Small Odd-Set Constraints in Maximum Weight Matching</p></div>
+        <div><a href='H-1B_visa.html'> <img src='images/H-1B_visa_smaller.jpg'> </a> <p>Predicting H-1B Visa Application Outcomes</p></div>
     </div> 
    <script type='module' src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js'></script>
    <script nomodule src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js'></script>
