--- a/H-1B_visa.html
+++ b/H-1B_visa.html
@@ -30,7 +30,7 @@
           </nav>
         </div>
         <div id='github-email-linkedin'>
-          <div class='github-email-linkedin'><a href='https://github.com/hhamilton33' target='_blank'><ion-icon name='logo-github'></ion-icon></a></div>
+          <div class='github-email-linkedin'><a href='https://github.com/hhamilton33/H-1B-petition-outcome' target='_blank'><ion-icon name='logo-github'></ion-icon></a></div>
           <div class='github-email-linkedin'><a href='https://www.linkedin.com/in/hanna-hamilton/' target='_blank'><ion-icon name='logo-linkedin'></ion-icon></a></div>
           <div class='github-email-linkedin'><a href='mailto: hmhamilton1126@gmail.com'><ion-icon name='mail-outline'></ion-icon></a></div>
         </div>
@@ -40,7 +40,7 @@
       </div>
     </header>
         <div class='project-description'> 
-            <p>  </p>
+            <p> Motivated by the large demand and limited supply of H-1B visas, I worked with classmates at Georgia Tech to build a predictive model and web application to assist prospective H-1B visa applicants. With a data set containing 3 million rows, we utilized logistic regression, support vector machines, and k-nearest neighbors to build an ensemble classification model which predicts the outcome of an H-1B visa application with 88.5% accuracy. These predictions feed into our web application, which enables prospective H-1B visa applicants to search for jobs by industry, job title, company, and location, thereby serving as a tool for identifying jobs that provide them with the best chance of obtaining an H-1B visa. The codebase and report are available via the GitHub link above. </p>
         </div>
         <div class='project-photo'> 
             <img src='images/H-1B_visa_smaller.jpg'> 
