--- a/hannamhamilton.com.html
+++ b/hannamhamilton.com.html
@@ -40,7 +40,7 @@
       </div>
     </header>
         <div class='project-description'> 
-            <p> I built this website with HTML, CSS, and JavaScript. The codebase is available via the GitHub link above. I enjoyed learning about design and web development through online courses and trial and error. This project was an opportunity for me to leverage my creativity, technical competency, and ability to learn new skills quickly. I will be updating this website with more projects in the future. </p>
+            <p> I built this website with HTML, CSS, and JavaScript. I enjoyed learning about design and web development through online courses and trial and error. This project was an opportunity for me to leverage my creativity, technical competency, and ability to learn new skills quickly. The codebase is available via the GitHub link above. I will be updating this website with more projects in the future. </p>
         </div>
         <div class='project-photo'> 
             <img src='images/waipio_valley_lookout_2_smaller.jpg'> 
