--- a/hannamhamilton.com.html
+++ b/hannamhamilton.com.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div>
-      <h1>hannamhamilton.com</h1>
+      <h1 id='hannamhamilton'>hannamhamilton.com</h1>
       </div>
     </header>
         <div class='project-description'> 
