--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <span><a href='CV.pdf' :hover> CV </a></span>
         <span><a href='#' :hover> Projects </a></span>
         <span><a href='#' :hover> Contact </a></span> -->
+    <script async src="https://tag.clearbitscripts.com/v1/pk_564f39563491a1765186a09768a4d12c/tags.js"></script>
     </header>
     <!-- <table>
       <tr>
